# alter_ego

./: alter_ego.opam  dune-project
lib/: dune  lib.ml
lib/ast/: dune  logic.ml  logic.mli
lib/cdcl/: dune
lib/dpll/: dune  intf.ml  naive.ml  naive.mli
lib/logic/: basic.ml  dune  intf.ml  prop.ml  prop.mli
lib/sat/: dune  intf.ml  naive_solver.ml  naive_solver.mli
lib/std/: dune  logic.ml  logic.mli  util.ml
test/: dune
